# Stock

./: .gitignore  Backtest.py  Backtestor.py  Predictor.py  README.md  Trainer.py  backtest.py  backtestors.py  config.json  constants.py  data_loader.py  datas.py  main.py  mechanism_demo.py  models.py  predict.py  pyproject.toml  requirements.txt  rl_runner.py  stockai_main.py  strategy.py  supervised.py  task.py  test_yf.py  train.py  trainers.py  try.ipynb
Sentiment-Analysis-Stocks/: .gitignore  FinBert.ipynb  FinGPT.ipynb  Mistral.ipynb  README.md  Statistical_Learning.ipynb  utils.py
base/: base_data.py  base_testor.py  base_trainer.py  datas.py  trainer.py
base_trainer/: trainer.py
cache/: 2330.TW_2016-01-01_2024-12-31_1d.csv
config/: backtest.yaml  core.yaml  model_structure.yaml  rl.yaml  training.yaml
configs/: Transformer.json  transformer.json
cv/: README.md  datas.py  utils.py  utils_test.py
cv-based/: README.md
cv_based/: README.md  datas.py  utils.py
mechanism/: __init__.py  alpha.py  execution.py  live_loop.py  portfolio.py  risk.py  validation.py
sa_models/: __init__.py  ga_svr.py  gru.py  lstm.py  ms_kalman.py  positional_encoding.py  tcn.py  transformer.py  transformer_encoder.py
sentiment/: scrape.py  sentiment.py
transformer/: .gitignore  README.md  a.ipynb  datas.py  utils.py
transformer-based/: .gitignore  README.md  datas.py  train.py  utils.py
transformer-based copy/: .gitignore  README.md  datas.py
transformer-old/: utils.py  utils_test.py
transformer_based/: datas.py  models.py  trainer.py  utils.py
(+410 files in other folders)
