[project]
name = "stock"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.4.0",
    "matplotlib==3.10.1",
    "numpy==2.1.2",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "tqdm==4.67.1",
    "yfinance==0.2.54",
]
