[project]
name = "stock"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.4.0",
    "matplotlib==3.10.1",
    "numpy==2.1.2",
    "pandas==2.2.3",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "scikit-learn==1.6.1",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "tqdm==4.67.1",
    "vadersentiment>=3.3.2",
    "beautifulsoup4>=4.12.0",
    "yfinance==0.2.54",
]
